--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -99,7 +99,7 @@ footer {
   position: relative;
   padding: 20px;
   border-radius: 12px;
-  background: #138803;
+  background: #328527;
   box-shadow: 0px 4px 15px rgba(0,0,0,0.1);
   min-height: 180px;
 }
@@ -117,8 +117,8 @@ footer {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  background: #08a15a;
-  color: rgb(3, 131, 60);
+  background: #e2e6e4;
+  color: rgb(22, 117, 70);
   border: none;
   padding: 8px 12px;
   border-radius: 50%;
